--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
@@ -4,18 +4,65 @@
       <h3><b> Monthly Reports</b></h3>
       <h6>View all Monthly Reports</h6>
     </div>
-    <a routerLink="/create-term" id="create-button" >
-      <button><i class="fa-solid fa-plus"></i> Import</button>
-    </a>
-    <a routerLink="/create-term" id="create-button">
-      <button><i class="fa-solid fa-plus"></i> Export</button>
-    </a>
+    <div class="abc">
+      <a  [hidden]="(role == 'Accountant')" routerLink="/create-term" class="create-button" >
+        <button> Import</button>
+      </a>
+      <a routerLink="/create-term" class="export-button">
+        <button> Export</button>
+      </a>
+    </div>
   </div>
   <div class="mb-4">
     <form class="searchBar">
-      <input type="text" placeholder="Search "  />
+      <input type="text" placeholder="Search " [value]="searchValue"  (input)="changeSearchText($event)"/>
       <i class="fa-solid fa-search"></i>
     </form>
+    <!-- Department -->
+
+    <mat-form-field  [hidden]="role == 'Admin'">
+
+      <mat-label style="color: white; ">Department</mat-label>
+      <mat-select [(value)]="selectedDepartment" (selectionChange)="onDepartmentSelected($event)">
+        <mat-option value="All">All</mat-option>
+        @for (depart of departments; track depart) {
+        <mat-option [value]="depart.departmentName">{{depart.departmentName}}</mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
+
+    <!-- Term -->
+    <mat-form-field>
+      <mat-label style="color: white;">Term</mat-label>
+      <mat-select [(value)]="selectedTerm" (selectionChange)="onTermSelected($event)">
+        <mat-option value="All">All</mat-option>
+        @for (term of terms; track term) {
+        <mat-option [value]="term.termName">{{term.termName}}</mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label style="color: white;">Quarter</mat-label>
+      <mat-select value="All" (selectionChange)="onQuarterSelected($event)">
+        <mat-option [value]="">All</mat-option>
+        @for (quarter of quarters; track quarter) {
+        <mat-option [value]="quarter.id">{{quarter.name}}</mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
+    <!-- //Status -->
+    <mat-form-field>
+      <mat-label style="color: white;">Status</mat-label>
+      <mat-select value="All" (selectionChange)="onStatusSelected($event)">
+        <mat-option value="All">All</mat-option>
+
+        <mat-option [value]="1">New</mat-option>
+        <mat-option [value]="2">Closed</mat-option>
+
+      </mat-select>
+    </mat-form-field>
+
   </div>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -23,22 +70,22 @@
       <th mat-header-cell *matHeaderCellDef> No. </th>
       <td mat-cell *matCellDef="let element; let i = index"> {{ i + 1 }} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="reportName">
       <th mat-header-cell *matHeaderCellDef>Report </th>
       <td mat-cell *matCellDef="let element"> {{element.reportName}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="month">
       <th mat-header-cell *matHeaderCellDef> Month </th>
       <td mat-cell *matCellDef="let element"> {{element.month}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="termName">
       <th mat-header-cell *matHeaderCellDef> Term </th>
       <td mat-cell *matCellDef="let element"> {{element.termName}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="departmentName">
       <th mat-header-cell *matHeaderCellDef> Department </th>
       <td mat-cell *matCellDef="let element"> {{element.departmentName}} </td>
@@ -58,7 +105,8 @@
       <td mat-cell *matCellDef="let element">
         <a [routerLink]="[ '/term-details/', element.id ]"><mat-icon>visibility</mat-icon></a>
 
-        <a [hidden]="(role == 'Accountant' && element.departmentName!= departmentName) || element.status == '2'" ><mat-icon>delete</mat-icon></a>
+        <a
+          [hidden]="(role == 'Accountant' && element.departmentName!= departmentName) || element.status == '2'"><mat-icon>delete</mat-icon></a>
       </td>
     </ng-container>
 
