--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/delete-report/delete-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/delete-report/delete-report.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Delete</h1>
 <mat-dialog-content>
-    <p>Are you sure you want to delete this term?<p>
+    <p>Are you sure you want to delete this report?<p>
     <p class="note">Please, rethink your decision because you will not be able to undo this action</p>
 </mat-dialog-content>
 <mat-dialog-actions>
