--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
@@ -1,88 +1,92 @@
 <main>
-    <div class="container mb-4 margin">
-        <div id="page-title">
-          <h4><b> Monthly Reports</b></h4>
-          <h6>Report Details</h6>
-        </div>
-        <div class="abc">
-          <a routerLink="/" class="create-button"  >
-            <button> Export</button>
-          </a>
-          <a routerLink="/" class="export-button">
-            <button> Reup</button>
-          </a>
-        </div>
+  <div class="container mb-4 margin">
+    <div id="page-title">
+      <h4><b> Monthly Reports</b></h4>
+      <h6>Report Details</h6>
     </div>
-    <div *ngIf="report" class="mb-4 report-details d-flex justify-content-between" >
-     
-      <div>
-        <h6>Report: {{report.reportName}}</h6>
-        <h6>Term: {{report.termName}}</h6>
-        <h6>Month: {{report.month}}</h6>
-        <h6>Department: {{report.departmentName}}</h6>
-        <h6>Status: {{report.status}}</h6>
-      </div>
-      <div>
-        <h6>Uploaded by: {{uploadedBy}}</h6>
-        <h6>Report Due Date: {{report.reportDureDate}}</h6>
-        <h6>Date: {{report.updateDate}}</h6>
-        <h6 class="underline" (click)="openReportVersionsDialog()">Version: v.{{report.version}}</h6>
-       
-      </div>
-     
+    <div class="abc">
+      <a routerLink="/" class="create-button">
+        <button> Export</button>
+      </a>
+      <a routerLink="/" class="export-button">
+        <button> Reup</button>
+      </a>
     </div>
-    <div> <h6>Total Expense:{{totalExpense}} </h6>
-      <h6>Biggest Expenditure: {{biggestExpenditure}}</h6></div>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
+  </div>
+  <div *ngIf="report" class="mb-4 report-details d-flex justify-content-between">
+
+    <div>
+      <h6>Report: {{report.reportName}}</h6>
+      <h6>Term: {{report.termName}}</h6>
+      <h6>Month: {{report.month}}</h6>
+      <h6>Department: {{report.departmentName}}</h6>
+      <h6>Status: {{report.status}}</h6>
+    </div>
+    <div>
+      <h6>Uploaded by: {{uploadedBy}}</h6>
+      <h6>Report Due Date: {{report.reportDureDate}}</h6>
+      <h6>Date: {{convertIsoDateToDdMmYyyy(report.updateDate)}}</h6>
+      <h6 class="underline" (click)="openReportVersionsDialog()">Version: v.{{report.version}}</h6>
+
+    </div>
+
+  </div>
+
+  <div>
+    <h6>Total Expense:{{totalExpense}} </h6>
+    <h6>Biggest Expenditure: {{biggestExpenditure}}</h6>
+  </div>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <ng-container matColumnDef="No">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.no}} </td>
-      </ng-container>
-  
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element"> {{element.no}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="Expense">
-        <th mat-header-cell *matHeaderCellDef> Expense </th>
-        <td mat-cell *matCellDef="let element"> {{element.expenseName}} </td>
-      </ng-container>
+      <th mat-header-cell *matHeaderCellDef> Expense </th>
+      <td mat-cell *matCellDef="let element"> {{element.expenseName}} </td>
+    </ng-container>
 
     <ng-container matColumnDef="CostType">
       <th mat-header-cell *matHeaderCellDef> Cost type </th>
       <td mat-cell *matCellDef="let element"> {{element.costType}} </td>
     </ng-container>
     <ng-container matColumnDef="Unit Price (VND)">
-        <th mat-header-cell *matHeaderCellDef> Unit Price (VND) </th>
-        <td mat-cell *matCellDef="let element"> {{element.unitPrice| number:'1.0-0'}} </td>
-     </ng-container>
-     <ng-container matColumnDef="Amount">
-        <th mat-header-cell *matHeaderCellDef> Amount </th>
-        <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
-     </ng-container>
-     <ng-container matColumnDef="Total">
-        <th mat-header-cell *matHeaderCellDef> Total (VND) </th>
-        <td mat-cell *matCellDef="let element"> {{element.totalAmount| number:'1.0-0' }} </td>
-     </ng-container>
-     
-     <ng-container matColumnDef="Project name">
-        <th mat-header-cell *matHeaderCellDef> Project name </th>
-        <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
-     </ng-container>
-     <ng-container matColumnDef="Supplier name">
-        <th mat-header-cell *matHeaderCellDef> Project name </th>
-        <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
-     </ng-container>
-     <ng-container matColumnDef="PIC">
-        <th mat-header-cell *matHeaderCellDef>PIC </th>
-        <td mat-cell *matCellDef="let element"> {{element.pic}} </td>
-     </ng-container>
-     <ng-container matColumnDef="Notes">
-        <th mat-header-cell *matHeaderCellDef>Notes </th>
-        <td mat-cell *matCellDef="let element"> {{element.note}} </td>
-     </ng-container>
-     
+      <th mat-header-cell *matHeaderCellDef> Unit Price (VND) </th>
+      <td mat-cell *matCellDef="let element"> {{element.unitPrice| number:'1.0-0'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="Amount">
+      <th mat-header-cell *matHeaderCellDef> Amount </th>
+      <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+    </ng-container>
+    <ng-container matColumnDef="Total">
+      <th mat-header-cell *matHeaderCellDef> Total (VND) </th>
+      <td mat-cell *matCellDef="let element"> {{element.totalAmount| number:'1.0-0' }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Project name">
+      <th mat-header-cell *matHeaderCellDef> Project name </th>
+      <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
+    </ng-container>
+    <ng-container matColumnDef="Supplier name">
+      <th mat-header-cell *matHeaderCellDef> Project name </th>
+      <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
+    </ng-container>
+    <ng-container matColumnDef="PIC">
+      <th mat-header-cell *matHeaderCellDef>PIC </th>
+      <td mat-cell *matCellDef="let element"> {{element.pic}} </td>
+    </ng-container>
+    <ng-container matColumnDef="Notes">
+      <th mat-header-cell *matHeaderCellDef>Notes </th>
+      <td mat-cell *matCellDef="let element"> {{element.note}} </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-   
+
   </table>
-  <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)" [hidden]="dataSource.length==0">
-</mat-paginator>   
+  <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)"
+    [hidden]="dataSource.length==0">
+  </mat-paginator>
 </main>
