--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reportVersions/reportVersions.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reportVersions/reportVersions.component.html
@@ -4,13 +4,16 @@
 
         <ng-container matColumnDef="Version" >
             <th mat-header-cell *matHeaderCellDef> Version </th>
-            <td mat-cell *matCellDef="let element" style=" text-decoration: underline;  cursor:pointer;">
-                 v.{{element.version}} </td>
+            <td mat-cell *matCellDef="let element; let firstRow = first">
+                {{ firstRow ? 'CURRENT v.' + element.version : 'v.' + element.version }}
+              </td>
         </ng-container>
+
         <ng-container matColumnDef="Published data">
             <th mat-header-cell *matHeaderCellDef> Published data </th>
-            <td mat-cell *matCellDef="let element"> {{element.importDate}} </td>
+            <td mat-cell *matCellDef="let element"> {{convertIsoDateToDdMmYyyy(element.importDate)}} </td>
         </ng-container>
+
         <ng-container matColumnDef="Changed by">
             <th mat-header-cell *matHeaderCellDef> Changed by </th>
             <td mat-cell *matCellDef="let element"> {{element.uploadedBy}} </td>
