--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
@@ -4,20 +4,19 @@
       <h1 class="mb-4">Import Plan</h1>
       <!-- <h5>Step 1/2: Please select a file to import</h5> -->
       <div class="card">
-        <form>
-          <p>
+        <form [formGroup]="planForm">
+          <!-- <p>
             <label for="term">Term *</label>
-          </p>
-          <mat-form-field appearance="fill">
+          </p> -->
+          <mat-form-field>
             <mat-label>Term</mat-label>
-            <mat-select disableOptionCentering panelClass="dropDown-seasons-panel" id="term">
-              <mat-option disabled selected>Please select term</mat-option>
+            <mat-select disableOptionCentering panelClass="dropDown-seasons-panel" id="term" formControlName="term">
               <mat-option *ngFor="let option of termOptions" [value]="option.value">
                 {{option.viewValue}}
               </mat-option>
             </mat-select>
           </mat-form-field>
-          <input type="file" id="file-input" hidden (change)="onFileSelected($event)" />
+          <!-- <input type="file" id="file-input" formControlName="fileInput"/> -->
         </form>
         <app-upload (fileSelected)="onFileSelected($event)"></app-upload>
         <div class="buttons">
@@ -25,13 +24,13 @@
             <span>Preview</span>
           </button>
         </div>
-      </div> 
+      </div>
     </div>
     <div class="col-lg-8 col-md-12 preview-card">
       <!-- <div class="preview-card"> -->
-        <!-- <div class="col-12"> -->
-          <h3 class="mb-3">Preview</h3>
-          <!-- <form class="row">
+      <!-- <div class="col-12"> -->
+      <h3 class="mb-3">Preview</h3>
+      <!-- <form class="row">
             <div class="col-lg-4 col-md-6 mb-3">
               <label for="term" class="form-label">Term</label>
               <input
@@ -63,67 +62,68 @@
               />
             </div>
           </form> -->
-          <!-- Data table -->
-          <div class="table mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource" class="">
-              <ng-container matColumnDef="expense">
-                <th mat-header-cell *matHeaderCellDef> Expense </th>
-                <td mat-cell *matCellDef="let element"> {{element.expense}} </td>
-              </ng-container>
-              <ng-container matColumnDef="costType">
-                <th mat-header-cell *matHeaderCellDef> Cost Type </th>
-                <td mat-cell *matCellDef="let element"> {{element.costType}} </td>
-              </ng-container>
-              <ng-container matColumnDef="unitPrice">
-                <th mat-header-cell *matHeaderCellDef> Unit Price(VND) </th>
-                <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
-              </ng-container>
-              <ng-container matColumnDef="amount">
-                <th mat-header-cell *matHeaderCellDef> Amount </th>
-                <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
-              </ng-container>
-              <ng-container matColumnDef="total">
-                <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
-                <td mat-cell *matCellDef="let element"> {{element.total}} </td>
-              </ng-container>
-              <ng-container matColumnDef="projectName">
-                <th mat-header-cell *matHeaderCellDef> Project Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
-              </ng-container>
-              <ng-container matColumnDef="supplierName">
-                <th mat-header-cell *matHeaderCellDef> Supplier Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
-              </ng-container>
-              <ng-container matColumnDef="pic">
-                <th mat-header-cell *matHeaderCellDef> PIC </th>
-                <td mat-cell *matCellDef="let element"> {{element.pic}} </td>
-              </ng-container>
-              <ng-container matColumnDef="notes">
-                <th mat-header-cell *matHeaderCellDef> Notes </th>
-                <td mat-cell *matCellDef="let element"> {{element.notes}} </td>
-              </ng-container>
-        
-              <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
-              <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
-            </table>
+      <!-- Data table -->
+      <div class="table mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" class="">
+          <ng-container matColumnDef="expense">
+            <th mat-header-cell *matHeaderCellDef> Expense </th>
+            <td mat-cell *matCellDef="let element"> {{element.expense}} </td>
+          </ng-container>
+          <ng-container matColumnDef="costType">
+            <th mat-header-cell *matHeaderCellDef> Cost Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.costType}} </td>
+          </ng-container>
+          <ng-container matColumnDef="unitPrice">
+            <th mat-header-cell *matHeaderCellDef> Unit Price(VND) </th>
+            <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
+          </ng-container>
+          <ng-container matColumnDef="amount">
+            <th mat-header-cell *matHeaderCellDef> Amount </th>
+            <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="total">
+            <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
+            <td mat-cell *matCellDef="let element"> {{element.total}} </td>
+          </ng-container>
+          <ng-container matColumnDef="projectName">
+            <th mat-header-cell *matHeaderCellDef> Project Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
+          </ng-container>
+          <ng-container matColumnDef="supplierName">
+            <th mat-header-cell *matHeaderCellDef> Supplier Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
+          </ng-container>
+          <ng-container matColumnDef="pic">
+            <th mat-header-cell *matHeaderCellDef> PIC </th>
+            <td mat-cell *matCellDef="let element"> {{element.pic}} </td>
+          </ng-container>
+          <ng-container matColumnDef="notes">
+            <th mat-header-cell *matHeaderCellDef> Notes </th>
+            <td mat-cell *matCellDef="let element"> {{element.notes}} </td>
+          </ng-container>
 
-            <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)" [hidden]="dataSource.length==0">
-            </mat-paginator>
-          </div>
-        <!-- </div> -->
+          <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
+          <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
+        </table>
+
+        <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)"
+          [hidden]="dataSource.length==0">
+        </mat-paginator>
+      </div>
       <!-- </div> -->
+      <!-- </div> -->
+      <div>
+        <div class="buttons">
+          <button class="back-button">
+            <span>Back</span>
+          </button>
+          <button class="submit-button" (click)="onSubmit()">
+            <span>Submit</span>
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 
- 
-  <!-- <div>
-    <div class="buttons">
-      <button class="back-button">
-        <span>Back</span>
-      </button>
-      <button class="next-button">
-        <span>Next</span>
-      </button>
-    </div>
-  </div> -->
+
 </main>
