--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/forgot-password/forgot-password.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/forgot-password/forgot-password.component.css
@@ -7,23 +7,22 @@ main {
 }
 
 .bg-image {
-  background-image: url(../../../../assets/img/forgot-password.png);
+  background-image: url(../../../../assets/img/auth-background.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-  filter: blur(50px);
-  transform: scaleX(-1);
 }
 
 mat-card {
-  height: 500px;
-  width: 1000px;
+  height: 600px;
+  width: 1200px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 20px 30px;
+  border-radius: 35px;
 }
 
 .content {
