--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/forgot-password/forgot-password.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/forgot-password/forgot-password.component.html
@@ -13,13 +13,9 @@
                         <mat-form-field class="w-100 mb-2">
                             <mat-label>Email</mat-label>
                             <input matInput type="email" placeholder="Ex. user@mail.com"
-                                [formControl]="emailFormControl" [errorStateMatcher]="matcher"/>
-                            @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
-                            <mat-error>Please enter a valid email address</mat-error>
-                            }
-                            @if (emailFormControl.hasError('required')) {
-                            <mat-error>Email is required</mat-error>
-                            }
+                                [formControl]="emailFormControl" required/>
+                            <mat-error *ngIf="!emailFormControl.hasError('required') && emailFormControl.hasError('email')">Please enter a valid email address</mat-error>                            
+                            <mat-error *ngIf="emailFormControl.hasError('required')">Email is required</mat-error>                            
                         </mat-form-field>
                         <button mat-raised-button type="submit" class="w-100">Reset password</button>
                     </form>
