--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
@@ -78,7 +78,7 @@
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let plan">
         <a><mat-icon>visibility</mat-icon></a>
-        <a *ngIf="showEditDeleteButton(plan)"><mat-icon>edit</mat-icon></a>
+        <a *ngIf="showEditDeleteButton(plan)" (click)="openDeleteDialog(plan.id)"><mat-icon>edit</mat-icon></a>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
