--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/list-annual-reports/list-annual-reports.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/list-annual-reports/list-annual-reports.component.html
@@ -2,21 +2,19 @@
 displayedColumns: string[] = ['Index','Year','TotalExpense','TotalDepartment','Create-Date']; -->
 
 <main>
-    <div class="container mb-4">
+    <div class="container mb-4 pb-3 mx-0">
         <div id="page-title">
             <h2><b> Annual Report</b></h2>
             <h5>Annual Report List</h5>
         </div>
 
     </div>
-    <div class="mb-4">
-        <div class="searchBar">
-            <form >
-            <input type="text" placeholder="Search " [value]="searchValue"
-                (input)="changeSearchText($event)" /></form>
-            <i class="fa-solid fa-search"></i>
-        </div>
-    </div>
+    <div class="mb-4 row">
+        <form class="searchBar col-6">
+          <input type="text" placeholder="Search" (input)="changeSearchText($event)" />
+          <i class="fa-solid fa-search"></i>
+        </form>
+      </div>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="dataSource.length==0">
 
         <ng-container matColumnDef="Index">
