--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
@@ -1,5 +1,4 @@
 <main>
- 
   <div class="container mb-4 pb-3 mx-0">
     <div id="page-title">
       <h3><b> Monthly Reports</b></h3>
@@ -16,7 +15,7 @@
   </div>
   <div class="mb-4 row">
     <form class="searchBar col-6">
-      <input type="text" placeholder="Search for Terms" (input)="changeSearchText($event)" />
+      <input type="text" placeholder="Search" (input)="changeSearchText($event)" />
       <i class="fa-solid fa-search"></i>
     </form>
     <button id="filter-button" class="btn col-6 ms-4" (click)="filterStatusEnable = !filterStatusEnable"><mat-icon
@@ -74,8 +73,7 @@
   
     <ng-container matColumnDef="reportName">
       <th mat-header-cell *matHeaderCellDef>Report </th>
-      <td mat-cell *matCellDef="let element"> {{element.departmentName+'_'
-        +element.termName+'_'+element.month+'_'+'Report'}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.reportName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="month">
